<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appHeader"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/teal_700"
    android:elevation="6dp">

    <TextView
        android:id="@+id/btnHeaderBack"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="‹"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="Loja Mobile"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="16dp"
        app:layout_constraintLeft_toRightOf="@id/btnHeaderBack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>