<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appBottomNav"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@color/white"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Início"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/navCart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Carrinho"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center" />

</LinearLayout>