...
                android:textColor="@color/teal_700"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/MerciCommande"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Pedido finalizado com sucesso!"
                android:textColor="#222222"
                android:textSize="26sp"
                android:textStyle="bold"
...
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/MerciCommande"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/ok"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="OK"
                android:textSize="18sp"
                android:textColor="@color/white"
...
